@@ -43,7 +43,9 @@
 #endif
 #include <setjmp.h>	/* jmp_buf */
 #include <stdlib.h>
+#if HAVE_SYS_TERMIOS_H
 #include <sys/termios.h>
+#endif
 
 static char const rcsid[] = "$Id$";
 
